--- a/rebar.config
+++ b/rebar.config
@@ -3,3 +3,5 @@
     {umb, ".*", {git, "git://github.com/seletskiy/umb.git"}},
     {getopt, ".*", {git, "git://github.com/jcomellas/getopt.git"}}
 ]}.
+
+{escript_incl_apps, [getopt]}.
