some fixes to get it work, finally; README added

--- a/rebar.config
+++ b/rebar.config
@@ -4,4 +4,6 @@
     {getopt, ".*", {git, "git://github.com/jcomellas/getopt.git"}}
 ]}.
 
-{escript_incl_apps, [getopt]}.
+{erl_opts, [{i, "deps/umb/include"}]}.
+
+{escript_incl_apps, [getopt, umb, sl]}.
